* fix aligment on framework and page card for counter and tick * fix alignment on Details page for Licenses: * Next is again a button no hyperlink * No underline on topNavBar links

--- a/src/client/src/components/TopNavBar/styles.module.css
+++ b/src/client/src/components/TopNavBar/styles.module.css
@@ -41,6 +41,10 @@
   font-size: 1.1em;
 }
 
+.topNavBar a:hover{
+  text-decoration: none;
+}
+
 @media (min-width: 650px) {
   .itemBorder {
     padding: 0px 25px 0px 0px;
