--- a/src/client/src/css/button.module.css
+++ b/src/client/src/css/button.module.css
@@ -37,7 +37,7 @@
 }
 
 .buttonLink:hover {
-  color: var(--vscode-textLink-foreground);
+  text-decoration: underline;
 }
 
 .buttonLink:focus {
