--- a/src/client/src/modals/GenerationModal/GenerationItem/styles.module.css
+++ b/src/client/src/modals/GenerationModal/GenerationItem/styles.module.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   padding: 0.6em 1.5em;
-  font-size: 1.2em;
 }
 
 .inLine {
