--- a/src/client/src/pages/AddPagesPage/PageCard/styles.module.css
+++ b/src/client/src/pages/AddPagesPage/PageCard/styles.module.css
@@ -15,7 +15,3 @@
   margin-top: 1rem;
   height: 9rem;
 }
-
-.pageCounter {
-  font-size: 1.2rem;
-}
